# book-writing-agent

./: .gitignore  README.md  pyproject.toml  run_book.py  run_picture_book.py  run_ui.py  sample-toc.json
app/: agent.py  book_context.py  checkpoint_downloader.py  fast_api_app.py  image_backends.py  job_manager.py  log_setup.py  model_manager.py  output_manager.py  picture_agent.py  picture_tools.py  pipeline_config.py  system_info.py  toc_generator.py  toc_io.py  toc_paths.py  tools.py  ui_server.py
static/: index.html
toc/: bicgwa-gyeol-toc.json  mijiyi-seomeseo-jouhan-oegyein-toc.json  sample-picture-toc.json  teseuteu-caeg-toc.json
